# c-my-models

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
include/: perceptron.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  perceptron.c
test/: CMakeLists.txt  test_perceptron.c
